debugging for bug on firefox

--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -8,3 +8,7 @@
   -ms-overflow-style: none;  /* IE and Edge */
   scrollbar-width: none;  /* Firefox */
 }
+
+.custom-fade-gradient {
+  -webkit-mask: linear-gradient(0deg,#0000,#000 48px calc(100% - 48px),#0000)
+}
